<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.pedromdev.listapplication.CadastroAlunoActivity"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_no_image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_nome_aluno_lbl"/>

        <EditText
            android:id="@+id/nome_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_nome_aluno_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_telefone_aluno_lbl"/>

        <EditText
            android:id="@+id/telefone_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_telefone_aluno_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_site_aluno_lbl"/>

        <EditText
            android:id="@+id/site_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_site_aluno_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_email_aluno_lbl"/>

        <EditText
            android:id="@+id/email_aluno"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_email_aluno_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_endereco_aluno_lbl"/>

        <EditText
            android:id="@+id/endereco_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_endereco_aluno_hint"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_nota_aluno_lbl"/>

        <SeekBar
            android:id="@+id/nota_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"/>

        <Button
            android:id="@+id/btn_salvar_aluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_salvar_aluno"/>

    </LinearLayout>
</ScrollView>